--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -58,6 +58,12 @@
     font-weight: normal;
     font-style: normal;
 }
+/* Custom Css */
+.testimonial-img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
 
 /* General Styling */
 body{
